# reportgen

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
examples/: compliance_report_config.json  create_sales_db.py  example.css  example.html  example.py  sales.sqlite3  sales_report_config.json  sales_report_data.json  sales_report_sql_config.json  vl-convert-example.py
reportgen/: __init__.py  cli.py  models.py  report.py
reportgen/templates/: report.html
